Feat: Configuring batabase and swagger
