# internal/dto/user_dto.go
@@ -1,0 +1,9 @@
+package dto
+
+// CreateUserInput representa apenas os dados permitidos no POST
+type CreateUserInput struct {
+	Nickname  string `json:"nickname" binding:"required"`
+	Email     string `json:"email" binding:"required"`
+	DiscordID string `json:"discordID"`
+	Password  string `json:"password" binding:"required"`
+}
