# internal/handler/user_handler.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	dto "github.com/kisalto/Feel-The-Night-Swagger/internal/dto"
 	"github.com/kisalto/Feel-The-Night-Swagger/internal/models"
 	"github.com/kisalto/Feel-The-Night-Swagger/internal/services"
 )
@@ -19,24 +20,31 @@ func NewUserHandler(userService *services.UserService) *UserHandler {
 
 // CreateUser godoc
 // @Summary      Criar um novo usuário
-// @Description  Cria um usuário com os dados informados no body
-// @Tags         Users
+// @Description  Cria um usuário com os dados informados no body.
+// @Tags         User
 // @Accept       json
 // @Produce      json
-// @Param        user  body      models.User  true  "Dados do usuário"
+// @Param        user  body      dto.CreateUserInput  true  "Dados do usuário"
 // @Success      201   {object}  models.User
 // @Failure      400   {object}  map[string]string
 // @Router       /users [post]
 func (h *UserHandler) CreateUser(c *gin.Context) {
-	var user models.User
+	var input dto.CreateUserInput
 
-	if err := c.ShouldBindJSON(&user); err != nil {
+	if err := c.ShouldBindJSON(&input); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
+	user := models.User{
+		Nickname:  input.Nickname,
+		Email:     input.Email,
+		DiscordID: input.DiscordID,
+		Password:  input.Password,
+	}
+
 	if err := h.userService.CreateUser(&user); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"Error": err.Error()})
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
@@ -47,10 +55,10 @@ func (h *UserHandler) CreateUser(c *gin.Context) {
 // GetUserById godoc
 // @Summary      Buscar usuário por ID
 // @Description  Retorna os dados de um usuário pelo ID
-// @Tags         Users
+// @Tags         User
 // @Accept       json
 // @Produce      json
-// @Param        id   path      int  true  "ID do Usuário"
+// @Param        user  body      dto.CreateUserInput  true  "Dados do usuário"
 // @Success      200  {object}  models.User
 // @Failure      400  {object}  map[string]string
 // @Failure      404  {object}  map[string]string
